<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <!--Material design card view holder-->
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="8dp"
        app:cardElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Orange Flag Warning Image-->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="184dp"
                android:background="#FFFFFF"
                android:contentDescription="@string/orange_flag"
                app:srcCompat="@drawable/secondary_symptoms" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!--Title and introduction text-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/observable_signs"
                    android:textAppearance="?attr/textAppearanceHeadline6" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/visual_signs_description"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="16sp" />

                <!--Checkboxes and questions-->
                <CheckBox
                    android:id="@+id/cb_ob_signs1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/observable_signs_q1"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/cb_ob_signs2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/observable_signs_q2"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="16sp"
                    android:layout_marginBottom="4dp"/>

                <CheckBox
                    android:id="@+id/cb_ob_signs3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/observable_signs_q3"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/cb_ob_signs4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/observable_signs_q4"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/cb_ob_signs5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/observable_signs_q5"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="16sp" />

            </LinearLayout>
            <!--App designed Buttons to continue/call ambulance -->
            <!--Layout_weight=1 gives each button equal size within the view-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/os_call_ambulance"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:onClick="onButtonClicked"
                    android:textSize="12sp"
                    android:text="@string/call_ambulance" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/os_continue"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:onClick="onButtonClicked"
                    android:textSize="12sp"
                    android:text="@string/continue_diagnosis" />
            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>

