...
    <string name="team_coached_hint">Team Coached *</string>
    <string name="password_hint">Password *</string>

    <!--Registration Screen buttons -->
    <string name="register_btn">Register</string>
    <string name="back_to_login_screen_btn">Back to login screen</string>
    <string name="registration_success">Registration Successful</string>
    <string name="required_fields">* Required Fields</string>
    <string name="player_register_btn">Register</string>

    <!--Red Flag Page-->
    <string name="call_ambulance">Call Ambulance</string>
    <string name="continue_diagnosis">Continue</string>
...
    <string name="delete_message">Do you really want to delete your profile?</string>
    <string name="delete_positive">Delete</string>
    <string name="delete_negative">Cancel</string>
    <string name="log_dialog">Alert Dialog</string>

    <!--Ambulance dialog-->
    <string name="ambulance_title">CALL AMBULANCE?</string>
    <string name="ambulance_message">Do you wish to call an Ambulance?</string>
    <string name="ambulance_positive">CALL</string>
    <string name="ambulance_negative">Cancel</string>
    <string name="login_title">Profile Choice</string>
    <string name="login_message">Choose a Profile...</string>
    <string name="login_player">Player</string>
...
