<?xml version="1.0" encoding="utf-8"?>
<!--Scroll view implemented as quite a lot of information on teh screen -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorBackground"
    tools:context=".RegistrationActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="8dp"
            android:src="@mipmap/smaller_intro"
            android:contentDescription="@string/logo_Image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_required_fields"
            android:textColor="@color/colorText"
            android:layout_marginBottom="10dp"/>

        <!--Use material components design for the text boxes -->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_email_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_phone_no"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_phone_no_edit"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_dob"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_of_birth_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_dob_edit"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackground" />
        </com.google.android.material.textfield.TextInputLayout>


        <!--  Datepicker used to select DOB ,hide the large calender and display the spinner calender style -->
        <DatePicker
            android:id="@+id/date_picker"
            android:layout_width="match_parent"
            android:layout_height="148dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:spinnersShown="true"


            tools:targetApi="lollipop" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_emergency_contact"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emergency_contact_hint">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_emergency_contact_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_emergency_contact_phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emergency_contact_phone_number_hint">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_emergency_contact_phone_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            app:passwordToggleEnabled="true">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--2 Buttons and a progress bar -->

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="onClick"
            android:text="@string/register_btn" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <Button
            android:id="@+id/back_to_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_to_login_screen_btn" />


    </LinearLayout>
</ScrollView>

